As an app developer, I want to be able to Delete the saved recipes from a list.
