# backend-api/routes/SavedRecipes.js
@@ -4,4 +4,7 @@ module.exports = (app) => {
     app.route("/savedrecipes")
     .post(SavedRecipesController.create)
     .get(SavedRecipesController.getAll) 
+
+     app.route("/savedrecipes/:SavedRecipeID")
+    .delete(SavedRecipesController.delete)
 }
